# ltweakr

./: Makefile  README.md  pyproject.toml  test.sh
neonctl/: app.py  constants.py  main.py
neonctl/backend/: appimage.py  autostart.py  backups.py  capabilities.py  cleanup.py  commands.py  config.py  containers.py  desktop.py  desktop_integration.py  diagnostics.py  disks.py  distro.py  flatpak.py  hardware.py  history.py  inventory.py  logs.py  models.py  monitoring.py  network.py  package_managers.py  packages.py  paths.py  privileges.py  processes.py  report.py  repositories.py  security.py  services.py  snap.py  system_info.py  themes.py  tweaks.py  updates.py  users.py  validators.py  workers.py
neonctl/ui/: about_page.py  appimage_page.py  backups_page.py  base_page.py  cleanup_page.py  containers_page.py  dashboard_page.py  diagnostics_page.py  disks_page.py  flatpak_page.py  installed_packages_tab.py  logs_page.py  main_window.py  navigation.py  network_page.py  package_page.py  processes_page.py  repositories_page.py  security_page.py  services_page.py  settings_page.py  snap_page.py  status_page.py  tasks_page.py  tray.py  tweaks_page.py  updates_page.py  (+1 more)
tests/: test_appimage.py  test_autostart.py  test_capabilities.py  test_cleanup.py  test_commands.py  test_desktop_integration.py  test_disks.py  test_distro.py  test_flatpak.py  test_history.py  test_inventory.py  test_monitoring.py  test_network.py  test_packages.py  test_privileges.py  test_processes.py  test_report.py  test_services.py  test_snap.py  test_tweaks.py  test_updates.py  test_validators.py
(+22 files in other folders)
