[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neonctl"
version = "0.1.0"
description = "Cyberpunk Linux desktop system management center"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8",
  "psutil>=5.9",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "black>=24"]

[project.scripts]
neonctl = "neonctl.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["neonctl*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
